<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?pageBackground"
    tools:context = ".activity/RankingActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/title_very_large_size"
        android:text="@string/ranking_title" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableLayout
                android:id="@+id/tableLayoutHighScores"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        style="@style/text_table_heading_small"
                        android:text="@string/history_firstrow_num"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        style="@style/text_table_heading_small"
                        android:text="@string/ranking_firstrow_player_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        style="@style/text_table_heading_small"
                        android:text="@string/ranking_firstrow_score"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        style="@style/text_table_heading_small"
                        android:text="@string/ranking_firstrow_wins"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        style="@style/text_table_heading_small"
                        android:text="@string/ranking_firstrow_losses"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        style="@style/text_table_heading_small"
                        android:text="@string/ranking_firstrow_skill"
                        android:onClick="skillExplanation"/>
                </TableRow>

            </TableLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/autocomplete_player_to_delete"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionDone"
                    android:hint="@string/ranking_firstrow_player_to_cancel"/>
                <Button
                    android:id="@+id/deletePlayerButton"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:onClick="deleteTypedPlayer"
                    style="?button"
                    android:text="@string/ranking_firstrow_player_delete"/>

            </LinearLayout>

            <Button
                android:id="@+id/deleteAllButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:onClick="deleteAllPlayers"
                style="?button"
                android:text="@string/ranking_firstrow_delete_all"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_back"
                android:onClick="backToMain"
                style="?button"/>


        </LinearLayout>

    </ScrollView>




</LinearLayout>

