<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?pageBackground"
    tools:context="ma2015.trabocchetto.activity.HistoryActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/title_very_large_size"
        android:text="@string/history_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayoutHistoryMatches"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/padding_history_title"
                        style="@style/text_table_heading"
                        android:text="@string/history_firstrow_num"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/padding_history_title"
                        style="@style/text_table_heading"
                        android:text="@string/history_firstrow_date"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/padding_history_title"
                        style="@style/text_table_heading"
                        android:text="@string/history_firstrow_first"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/padding_history_title"
                        style="@style/text_table_heading"
                        android:text="@string/history_firstrow_second"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/padding_history_title"
                        style="@style/text_table_heading"
                        android:text="@string/history_firstrow_third"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/padding_history_title"
                        style="@style/text_table_heading"
                        android:text="@string/history_firstrow_fourth"/>

                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_back"
                style="?button"
                android:onClick="backToMain"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
